--- a/.prettierrc
+++ b/.prettierrc
@@ -1,4 +1,8 @@
 {
-  "arrowParens": "avoid",
-  "semi": false
+  "singleQuote": true,
+  "semi": false,
+  "trailingComma": "all",
+  "useTabs": false,
+  "jsxSingleQuote": true,
+  "arrowParens": "avoid"
 }
